<resources>
    <string name="app_name">CykelSpårare</string>

    <!--  Menu  -->
    <string name="menu_1">Logga In</string>
    <string name="menu_2">Karta</string>
    <string name="menu_3">Inställningar</string>

    <string name="map">Karta</string>
    <string name="settings">Inställningar</string>
    <string name="login">Logga in</string>
    <string name="account_settings">Konto</string>
    <string name="notification_settings">Notiser</string>
    <string name="description">beskrivning</string>
    <string name="groups">Grupper</string>

    <!--Login Fragment-->
    <string name="loginPassword">Lösenord</string>
    <string name="loginEmail">Email</string>
    <string name="buttonLogin">Logga in</string>
    <string name="buttonCreateAccount">Skapa konto</string>
    <string name="textViewForgotPassword">Glömt ditt lösenord?</string>

    <!--Register Fragment-->
    <string name="registerPassword">Lösenord</string>
    <string name="register">Registrera</string>
    <string name="registerEmail">Email</string>
    <string name="fullName">För- och efternamn</string>

    <!--Group Fragment-->
    <string name="groupName">Gruppens namn</string>
    <string name="createGroup">Skapa grupp</string>
    <string name="create_a_new_group">Skapa en ny grupp</string>
    <string name="create_a_new_device">Lägg till en ny enhet</string>
    <string name="name">Namn</string>
    <string name="create_device">Skapa enhet</string>
    <string name="device_name">Enhetens namn</string>
    <string name="edit_group_name">Ändra gruppnamn</string>
    <string name="delete_group">Radera grupp</string>
    <string name="done">Klar</string>
    <string name="delete_device">Radera enhet</string>
    <string name="myLocationDescription">Centrera enhetens plats på kartan</string>
    <string name="yggio_id">Yggio ID</string>
    <string name="create_a_new_checkpoint">Lägg till en ny checkpoint</string>
    <string name="delete_checkpoint">Radera plats</string>
    <string name="latitude">Latitud</string>
    <string name="checkpoint_name">Namn på checkpoint</string>
    <string name="longitude">Longitud</string>
    <string name="create_checkpoint">Skapa en ny checkpoint</string>
    <string name="backButton">Gå tillbaka</string>
    <string name="logout">Logga ut</string>
</resources>