<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@drawable/side_nav_bar">

    <group
        android:checkableBehavior="single"
        android:title="@string/app_name">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_notification_settings"
            android:icon="@drawable/ic_notification_settings"
            android:title="@string/notification_settings" />
        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/ic_account_settings"
            android:title="@string/account_settings" />
    </group>
</menu>